--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0-beta1",
+    "feather-icons": "^4.28.0",
     "json-server": "^0.16.3",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
